# greysight

./: .dockerignore  .env.example  .gitignore  .roborev.toml  AGENTS.md  README.md  briefing.md  package-lock.json  package.json  railway.json
apps/api/: Dockerfile  dev.py  package.json  pyproject.toml
apps/api/app/: auth.py  config.py  main.py  models.py
apps/api/app/routes/: automated_savings.py  dashboard_runs.py  health.py  onboarding.py  organizations.py  session.py  snowflake.py
apps/api/app/services/: __init__.py  ai_consumption.py  audit_events.py  automated_savings_store.py  connect_rate_limit.py  cost_metrics.py  dashboard_cache_settings.py  dashboard_datasets.py  dashboard_registry.py  dashboard_run_cache.py  dashboard_view_builder.py  dashboard_view_models.py  dataset_bounds.py  deferred_sources.py  demo_data.py  http_pool.py  membership_directory.py  org_connection_resolver.py  org_invitations.py  org_provisioning.py  parallel_source_runner.py  (+8 more)
apps/api/tests/: conftest.py  test_ai_consumption.py  test_audit_events.py  test_auth.py  test_automated_savings_events_route.py  test_automated_savings_migration.py  test_automated_savings_route.py  test_automated_savings_sql_smoke.py  test_automated_savings_store.py  test_config.py  test_connect_rate_limit.py  test_cost_metrics.py  test_dashboard_cache_settings_route.py  test_dashboard_cache_wiring.py  test_dashboard_datasets.py  test_dashboard_models.py  test_dashboard_registry.py  test_dashboard_run_cache_route.py  test_dashboard_run_cache_store.py  test_dashboard_run_repository.py  test_dashboard_run_sources.py  test_dashboard_runs_async.py  test_dashboard_view_builder.py  test_dashboard_view_builder_ai.py  test_dashboard_view_models.py  test_dataset_bounds.py  test_dataset_retention.py  test_demo_dashboard_run.py  test_demo_data.py  test_dev_env.py  test_health.py  test_http_pool.py  test_membership_directory.py  test_onboarding_route.py  test_org_connection_resolver.py  test_org_invitations.py  test_org_provisioning.py  test_organizations_route.py  test_parallel_source_runner.py  test_query_concurrency.py  (+11 more)
apps/auto-savings/: Dockerfile  dev.py  pyproject.toml  railway.json
apps/auto-savings/tests/: test_config.py  test_decision.py  test_engine.py  test_main.py  test_reconcile.py  test_sharding.py  test_snowflake_session.py  test_store.py  test_tenant_loop.py  test_warehouse_snapshot.py
shared/connect/: pyproject.toml
shared/connect/tests/: test_metadata_query.py  test_org_connection_resolver.py  test_snowflake_account.py  test_snowflake_client.py
(+249 files in other folders)
