[project]
name = "greysight-connect"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-snowflake[dbapi]==1.11.0",
    "httpx==0.28.1",
    "cryptography",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greysight_connect"]

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
